# hs-gomoku

./: README.md  gomoku-hs.cabal  public
app/: Main.hs
src/: Gomoku.hs  Lib.hs  Web
