name:                gomoku-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gomoku-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  Exposed-modules:     Lib
                       Gomoku
                       Web.Scotty
                       Web.Scotty.Trans
                       Web.Scotty.Internal.Types
  other-modules:       Web.Scotty.Action
                       Web.Scotty.Route
                       Web.Scotty.Util
  default-language:    Haskell2010
  build-depends:       aeson               >= 0.6.2.1  && < 1.3,
                       base                >= 4.3.1    && < 5,
                       blaze-builder       >= 0.3.3.0  && < 0.5,
                       bytestring          >= 0.10.0.2 && < 0.11,
                       case-insensitive    >= 1.0.0.1  && < 1.3,
                       data-default-class  >= 0.0.1    && < 0.2,
                       exceptions          >= 0.7      && < 0.9,
                       fail,
                       http-types          >= 0.8.2    && < 0.10,
                       monad-control       >= 1.0.0.3  && < 1.1,
                       mtl                 >= 2.1.2    && < 2.3,
                       nats                >= 0.1      && < 2,
                       network             >= 2.6.0.2  && < 2.7,
                       regex-compat        >= 0.95.1   && < 0.96,
                       text                >= 0.11.3.1 && < 1.3,
                       transformers        >= 0.3.0.0  && < 0.6,
                       transformers-base   >= 0.4.1    && < 0.5,
                       transformers-compat >= 0.4      && < 0.6,
                       wai                 >= 3.0.0    && < 3.3,
                       wai-extra           >= 3.0.0    && < 3.1,
                       warp                >= 3.0.0 && < 3.3,
                       random,
                       time

executable gomoku-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gomoku-hs
  default-language:    Haskell2010

test-suite gomoku-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gomoku-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gomoku-hs
